# rusty-blog-webapp

./: .env-example  Cargo.toml  README.md  bun.lockb  package.json  tailwind.config.js
config/: development.toml  production.toml
src/: main.rs
src/models/: mod.rs
src/routes/: api.rs  auth.rs  mod.rs  web.rs
src/services/: mod.rs
src/utils/: mod.rs
static/css/: main.css  tailwind.css
templates/base/: footer.html  header.html  layout.html
templates/components/: card.html
templates/modals/: alert_modal.html  login_modal.html
templates/pages/: 404.html  about.html  api.html  contact.html  home.html
templates/partials/: alerts.html  notifications.html
