[package]
name = "tda-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
moka = { version = "0.12.8", features = ["sync"] }
refinery = { version = "0.8.14", features = ["postgres"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = "0.8.2"
tera = "1.20.0"
tokio = { version = "1.41.1", features = ["macros"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = "0.19.0"
